fix new user page, create root route

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 <%= f.number_field :balance %> <br>
 
 <%= f.label :admin, "Interested in starting your own class?"%>
-<%= f.boolean :admin %> <br>
+<%= f.check_box :admin %> <br>
 
 <%= f.submit "Create User" %>
 <%end %>
