--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@ Current Balance: <%= @user.balance %>
 
 <%= button_to "Book Reservation", new_reservation_path,class: "btn", method: :get %>
 
-<%= button_to "My Activities", user_activities_path, class: "btn", method: :get %>
+<%= button_to "My Activities", user_activities_path(current_user), class: "btn", method: :get %>
 
-<%= button_to "Logout", logout_path, class: "btn", method: :delete %>
+<%#= button_to "Logout", logout_path, class: "btn", method: :delete %>
 
 </div>
