--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create A User</h1>
 
 <div class ="new_activity">
-<%= form_for @user, controller: 'users', action: 'create' do |f| %>
+<%= form_for @user, :url => signup_path(@user) do |f| %>
 
 <%= f.label :username %>
 <%= f.text_field :username %> <br>
