small changes to some code in controllers, reset database

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,6 @@ Current Balance: <%= @user.balance %>
 
 <%= button_to "My Activities", user_activities_path(current_user), class: "btn", method: :get %>
 
-<%#= button_to "Logout", logout_path, class: "btn", method: :delete %>
+<%= button_to "Logout", logout_path, class: "btn", method: :delete %>
 
 </div>
