--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome</h1>
+<h1>Welcome to trybNY</h1>
+
+Want to join a tryb?
 <%= link_to "Sign Up", signup_path%>
+<br>
+<br>
+Have an account?
+<%= link_to "Log In", login_path%>
