--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,6 +2,6 @@
 <br>
 <h3> Select a Reservation: </h3>
 <% @reservations.each do |reservation| %>
-<%= link_to reservation.datetime, reservation_path(reservation)%> <br>
+<%= reservation_path(reservation)%> <br>
 <br>
 <%end %>
