--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -5,6 +5,8 @@ Description: <%= @activity.description %> <br>
 Location: <%= @activity.location %> <br>
 Capacity: <%= @activity.capacity %> <br>
 Price:    <%= @activity.price %> <br>
+Start Time <%= @activity.start_at %> <br>
+End Time <%= @activity.end_at %> <br>
 -----------------------------------
 <br>
 Reviews: <br>
