--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,4 +7,4 @@ Want to join a tryb?
 Have an account?
 <%= link_to "Log In", login_path%>
 
-<%= link_to "Google Log In", login_path%>
+<%= link_to "Log In with Google", '/auth/google_oauth2' %>
