--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -11,7 +11,8 @@
       <%= link_to activity.title, activity_path(activity)%></a>
     <br>
      <%= activity.description %>
-    <%= button_to "Book Reservation", new_reservation_path, class: "btn", method: :get %>
+    <%= button_to "Book Reservation", user_reservations_path(user_id: current_user.id, reservation: {user_id: current_user.id, activity_id: activity.id}), class: "btn", method: :post, data: {disable_with: "Please Wait..."} %>
+    <br>
   <%end %>
 </div>
 
