--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -23,3 +23,4 @@ Ended <%= time_ago_in_words(@activity.end_at) %> ago
   <% end %>
 <% end %>
 
+    <%= button_to "Book Reservation", new_reservation_path, class: "btn", method: :get %>
