--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -2,6 +2,11 @@
 
 Description: <%= @activity.description %> <br>
 
+<% if @post.image.attached? %>
+   <%= image_tag url_for(@post.image) %>
+<% end %>
+
+
 Location: <%= @activity.location %> <br>
 Capacity: <%= @activity.capacity %> <br>
 Price:    <%= @activity.price %> <br>
