--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -23,8 +23,8 @@
 <%= f.label :end_at %>
 <%= f.datetime_field :end_at %> <br>
 
-<%= form.label :image %> 
-<%= form.file_field :image %>
+<%= f.label :image %> 
+<%= f.file_field :image %>
 
 <%= f.hidden_field :user_id, :value => session[:user_id] %>
 
