--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -9,8 +9,8 @@
 <div class="ui grid">
   <% @activities.each do |activity| %>
       <%= link_to activity.title, activity_path(activity)%>
-      <% if @activity.image.attached? %>
-      <%= image_tag activity.image.variant(resize_to_limit: [100, 100]) %>
+      <% if activity.imageurl %>
+        <%= filestack_image activity.imageurl, size: "400x300", alt: "Picture" %>
       <% end %>
     <br>
     <%= activity.description %>
